# vasim

./: .gitignore  README.md  pyproject.toml
src/vasim/: instrument.py  sim.py
src/vasim/data/: WHOVA2022_XLS_form_for_ODK.xlsx
tests/: test_vasim.py
